:lipstick: added webkit scrollbars, resolves #20

--- a/Songhay.Dashboard/ClientApp/src/app/components/dashboard/studio-feed/studio-feed.component.scss
+++ b/Songhay.Dashboard/ClientApp/src/app/components/dashboard/studio-feed/studio-feed.component.scss
@@ -3,6 +3,15 @@
 
 .mat-card {
     ::ng-deep {
+
+        ::-webkit-scrollbar {
+            background-color: $greys-background;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background-color: $akyinkyin-light-tone;
+        }
+
         & .mat-card-title {
             color: $akyinkyin-light-tone;
             & span {
@@ -21,6 +30,7 @@
             max-height: 16rem;
             overflow-x: hidden;
             overflow-y: auto;
+            padding-right: 0.5rem;
 
             & li {
                 list-style-type: square;
